2013-02-27 JJ Allaire <jj@rstudio.org>

        * R/Rcpp.package.skeleton.R: eliminated spurious empty hello world
        function definition in Rcpp.package.skeleton

2013-02-24 JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: add global package include file to RcppExports.cpp
        if it exists; handle Rcpp module definitions in sourceCpp
        * src/attributes.cpp: handle Rcpp module definitions in sourceCpp
        * man/sourceCpp.Rd: documentation updates

2013-02-19 Romain Francois <romain@r-enthusiasts.com>

        * src/api.cpp : more debugging
        * include/RcppCommon.h : move sexp_to_name here. Used in some debugging
        * include/Rcpp/vector/MatrixRow.h : fix const version of operator[]
        * include/Rcpp/vector/Vector.h : more debugging
        * include/Rcpp/internal/wrap.h : more debugging. more dispatch.  
        
2013-02-18 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/string_proxy.h : only declare operator+=
        * include/Rcpp/String.h : define string_proxy::operator+=, now that
        String is defined.

2013-02-15 JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: Merge existing values of build related
        environment variables for sourceCpp

2013-02-12 Romain Francois <romain@r-enthusiasts.com>

        * src/api.cpp : More careful about RCPP_PROTECTION_STACK init

2013-02-08 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/as.h: re-enable as<std::string>(CharacterVector[int])
2013-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/THANKS: Adding Ben North for the help / bug report on iterators

2013-02-05 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/string_proxy.h : more wstring support
        * include/Rcpp/XPtr.h : more debugging. removed delete_finalizer
	which is no longer used

2013-02-05 JJ Allaire <jj@rstudio.org>

        * src/attributes.cpp : ensure that line comments invalidate block