@@ -1,3 +1,8 @@
+2013-02-28 JJ Allaire <jj@rstudio.org>
+
+        * src/attributes.cpp: standalone roxygen chunks (e.g. to document
+        a class) are now transposed into RcppExports.R
+
 2013-02-27 JJ Allaire <jj@rstudio.org>
 
         * R/Rcpp.package.skeleton.R: eliminated spurious empty hello world
